This 100% is last

--- a/pages/products/products.html
+++ b/pages/products/products.html
@@ -35,7 +35,7 @@
           <!-- <li>Produs</li> -->
         </ul>
 
-        <button class="button button-next">➡</button>
+        <button class="button button-next">→</button>
       </div>
     </main>
     <script src="./products.js"></script>
